--- a/assets/css/secondary-styles.css
+++ b/assets/css/secondary-styles.css
@@ -16,8 +16,8 @@
 }
 
 .secondary-content {
-    width: 80;
-    margin: 0 auto 0 auto;
+    width: 80%;
+    margin: 0 auto;
     color: #024e76;
 }
 
